--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "migrate": " npx knex migrate:latest --knexfile db/knexfile.js"
+    "migrate": "npx knex migrate:latest --knexfile db/knexfile.js",
+    "seed": "knex seed:run --knexfile db/knexfile.js"
   },
   "author": "Ebrahim Ghanbari",
   "license": "ISC",
